Main Page Refinements
